--- a/freshniso/templates/freshniso/checkout.html
+++ b/freshniso/templates/freshniso/checkout.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Checkout {% endblock %}
+{% block head_title %} Checkout {% endblock %}
 
 {% block content %}
   <main class="mt-5 pt-4">
