--- a/freshniso/templates/freshniso/order_summary.html
+++ b/freshniso/templates/freshniso/order_summary.html
@@ -23,20 +23,60 @@
                     <tbody>
                     {% for order_item in order.items.all %}
                         <tr>
-                            <th scope="row">1</th>
+                            <th scope="row">{{ forloop.counter }}</th>
                             <td>{{ order_item.item.title }}</td>
                             <td>{{ order_item.item.price }}</td>
-                            <td>{{ order_item.quantity }}</td>
+                            <td>
+                                <a href="{% url 'remove-single-item-from-cart' order_item.item.slug %}">
+                                    <i class="fas fa-minus mr-2"></i>
+                                </a>
+                                {{ order_item.quantity }}
+                                <a href="{% url 'add-to-cart' order_item.item.slug %}">
+                                    <i class="fas fa-plus ml-2"></i>
+                                </a>
+                            </td>
                             <td>
                                 {% if order_item.item.discount_price %}
                                     ${{ order_item.get_total_discount_price }}
+                                    <span class="badge badge-primary">
                                     (Saving ${{ order_item.get_amount_saved }})
+                                    </span>
                                 {% else %}
-                                    ${{ order_item.get_total_price }}
+                                    ${{ order_item.get_total_item_price }}
                                 {% endif %}
+                            <a href="{% url 'remove-from-cart' order_item.item.slug %}>
+                                <i class="fas fa-trash float-lg-right"></i>
+                            </a>
+                            </td>
+                        </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="5">Your card is empty</td>
+                        </tr>
+                        <tr>
+                            <td colspan="5">
+                                <a href="{% url 'home' %}" class="btn btn-primary float-right">
+                                    Continue shopping
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
+                        <tr>
+                        <td colspan="4"><b>Order Total</b></td>
+                        <td>${{ order.get_total }}</td>
+                    </tr>
+                    {% if order.items|length != 0 %}
+                    <tr>
+                        <td colspan="5">
+                            <a href="{% url 'checkout' %}" class="btn btn-warning float-right ml-2">
+                                Proceed to checkout
+                            </a>
+                            <a href="{% url 'home' %}" class="btn btn-primary float-right">
+                                Continue shopping
+                            </a>
+                        </td>
+                    </tr>
+                    {% endif %}
                     </tbody>
                     <!--Table body-->
                 </table>
