--- a/freshniso/templates/freshniso/checkout.html
+++ b/freshniso/templates/freshniso/checkout.html
@@ -17,15 +17,9 @@
 
                     <!--Card-->
                     <div class="card">
-                        <form>
-                            {% csrf_token %}
-                            {{ form|crispy }}
-                            <button class="btn btn-primary" type="submit">Checkout</button>
-                        </form>
-
                         <!--Card content-->
-                        <form class="card-body">
-
+                        <form class="card-body" method="post"> 
+                            {% csrf_token %}
                             <!--Grid row-->
                             <div class="row">
                                 <div class="md-form mb-5">
@@ -40,63 +34,62 @@
                                     {{ form.apartment_address }}
                                     <label for="address-2" class="">Address 2 (optional)</label>
                                 </div>
+                            </div>
 
                                 <!--Grid row-->
-                                <div class="row">
+                            <div class="row">
 
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
+                                <!--Grid column-->
+                                <div class="col-lg-4 col-md-12 mb-4">
 
-                                        <label for="country">Country</label>
-                                        {{ form.country }}
-                                        <div class="invalid-feedback">
-                                            Please select a valid country.
-                                        </div>
-
+                                    <label for="country">Country</label>
+                                    {{ form.country }}
+                                    <div class="invalid-feedback">
+                                        Please select a valid country.
                                     </div>
-
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-6 mb-4">
-
-                                        <label for="zip">Zip</label>
-                                        {{ form.zip }}
-                                        <div class="invalid-feedback">
-                                            Zip code required.
-                                        </div>
-
-                                    </div>
-                                    <!--Grid column-->
 
                                 </div>
+
+                                <!--Grid column-->
+                                <div class="col-lg-4 col-md-6 mb-4">
+
+                                    <label for="zip">Zip</label>
+                                    {{ form.zip }}
+                                    <div class="invalid-feedback">
+                                        Zip code required.
+                                    </div>
+
+                                </div>
+                                <!--Grid column-->
+
+                            </div>
                                 <!--Grid row-->
 
                                 <hr>
 
                                 <div class="custom-control custom-checkbox">
-                                    {{ form.same_billing_address }}
-                                    <label class="custom-control-label" for="same-address">Shipping address is the same
+                                   <input class="custom-control-input" {% if form.same_shipping_address.value %} checked {% endif %} type="checkbox" id="billing"/>
+                                    <label class="custom-control-label" for="billing">Shipping address is the same
                                         as my billing address</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    {#                <input type="checkbox" class="custom-control-input" id="save-info">#}
-                                    {{ form.save_info }}
-                                    <label class="custom-control-label" for="save-info">Save this information for next
+                                    <input class="custom-control-input" {% if form.save_info.value %} checked {% endif %} type="checkbox" id="save_info"/>
+                                    <label class="custom-control-label" for="save_info">Save this information for next
                                         time</label>
                                 </div>
 
                                 <hr>
-
                                 <div class="d-block my-3">
                                     {% for value, name in form.fields.payment_option.choices %}
                                         <div class="custom-control custom-radio">
-                                            <input id="{{ name }}" name="{{ name }}" type="radio"
-                                                   class="custom-control-input" checked required>
+                                            <input id="{{ name }}" name="payment_option" type="radio"
+                                                   class="custom-control-input" value="{{ value }}" checked required>
                                             <label class="custom-control-label" for="{{ name }}">{{ name }}</label>
                                         </div>
                                     {% endfor %}
                                 </div>
-                                <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
-                            </div>
+                            <hr>
+                            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
                         </form>
 
                     </div>
