--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
         }
 
     </style>
+    {% block styles %} {% endblock %}
 </head>
 
 <body>
@@ -66,6 +67,7 @@
 {% endblock %}
 {% include 'footer.html' %}
 {% include 'scripts.html' %}
+{% block javascripts %}{% endblock %}
 </body>
 
 </html>
